# teamings

./: .env.example  .gitignore  CHANGELOG.md  EXTENSION_GOTCHAS.md  LEARNINGS.md  README.md  pyproject.toml  regressions.txt  runner.py
attacks/context_stuffing/: 01_refund_policy.yaml  02_meeting_time.yaml  03_kb_pricing.yaml  04_dosage.yaml  05_company_founded.yaml  06_security_policy.yaml  07_ticket_owner.yaml  08_legal_clause.yaml  09_recipe.yaml  10_api_endpoint.yaml
attacks/goal_hijacking/: 01_summarize_then_sysprompt.yaml  02_translate_then_instructions.yaml  03_code_review_then_canary.yaml  04_email_draft_then_offtopic.yaml  05_recipe_then_reveal.yaml  06_qa_then_canary.yaml  07_summarize_then_persona.yaml  08_explain_then_canary.yaml  (+2 more)
ground_truth/: README.md  partial_human_verdicts.jsonl  sample_for_judging.jsonl
ground_truth_scaffolding/: README.md
judge/: consistency.py  llm_judge.py  rule_based.py
results/: disagreements_20260506_144709.csv  judge_cache.json  repro_judge_contradiction_20260506_145646.csv  run_20260506_115452.csv  run_20260506_120350.csv  run_20260506_124615.csv  run_20260506_130730.csv  run_20260506_131155.csv  run_20260506_134617.csv  run_20260506_144709.csv  run_20260506_150000.csv
scripts/: judge_accuracy_report.py  judge_cli.py  probe_hf_models.py  repro_judge_contradiction.py  sample_for_human_judging.py  smoke_test.py
targets/: anthropic_target.py  base.py  hf_inference_target.py  local_target.py  openai_target.py
tests/: test_consistency.py  test_ground_truth.py  test_llm_judge.py  test_runner.py  test_targets.py
(+41 files in other folders)
